fix ronded buttons gap & blue section text selection

--- a/src/layout/common.css
+++ b/src/layout/common.css
@@ -40,6 +40,7 @@ button {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  pointer-events: none;
 }
 
 .button-rounded {
@@ -48,7 +49,6 @@ button {
   display: flex;
   align-self: center;
   align-items: center;
-  gap: 8px;
   width: fit-content;
   padding: 10px 20px;
   font-family: 'Space Grotesk';
@@ -63,6 +63,7 @@ button {
 
 .button-rounded svg {
   width: 0;
+  padding-left: 0;
   transition: 0.3s;
 }
 
@@ -76,6 +77,19 @@ button {
   height: 100%;
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
+}
+
+@media (pointer: fine) {
+  .button-rounded:hover svg {
+    padding-left: 8px;
+    width: 25px;
+  }
+
+  .button-rounded:hover:before {
+    left: 0%;
+    right: auto;
+    width: 100%;
+  }
 }
 
 .button-circle {
@@ -97,18 +111,6 @@ button {
 
 .text-color-blue {
   color: var(--cv-blue);
-}
-
-@media (pointer: fine) {
-  .button-rounded:hover svg {
-    width: 25px;
-  }
-
-  .button-rounded:hover:before {
-    left: 0%;
-    right: auto;
-    width: 100%;
-  }
 }
 
 .text-color-peperment {
